# bookstore-ai

./: README.md  main.py  predict_fuse.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: ai_endpoints.py  book_endpoints.py  cart_endpoints.py  order_endpoints.py  upload_images.py  user_endpoints.py
app/core/: __init__.py  config.py
app/db/: adapter.py  crud.py  crud_book.py  crud_cart.py  crud_order.py  crud_user.py
app/schemas/: book.py  cart.py  common.py  order.py  user.py
data/: books.csv  train.csv  train_booklevel.csv  val.csv  val_booklevel.csv
deprecated/: convert_to_book_level.py  dataset_infer.py  model_setup.py
results/: book_condition_report.json
test/: test.py
training/: convert_to_book_level.py  dataloader_setup.py  dataset.py  dataset_infer.py  model_multiview.py  model_setup.py  predict_fuse.py  split_data.py  train_loop.py
utils/: utils.py
